[package]
name = "bybit_rs"
version = "0.1.6"
authors = [
    "Omambia Dauglous <omambiadauglous@gmail.com>",
    "NGENI Labs <https://ngeni.io>",
    "Dennis Mwangi <dennismwangidev@gmail.com>",
]
edition = "2018"
rust-version = "1.67"

description = "Fork of the Official Python3 API connector for Bybit's HTTP (bybit) and WebSockets APIs to rust"
documentation = "https://docs.rs/bybit_rs"
readme = "README.md"
homepage = "https://docs.rs/bybit_rs"
license = "MIT"
keywords = ["rust", "bybit_rs", "pybit_rust"]
categories = ["development-tools::cargo-plugins"]
repository = "https://github.com/domambia/bybit_rs"
exclude = ["example_folder"]
[lib]
name = "bybit_rs"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
futures = "0.3.5"
thiserror = "1.0.13"

#JSON libs
serde_json = "1.0.57"
serde = "1.0.104"
serde_derive = "1.0.104"


#Request
reqwest = { version = "0.11.14", features = [
    "json",
    "default",
    "socks",
    "blocking",
    "stream",
] }

# encryption
sha2 = "0.9.3"
hmac = "0.10.1"
hex = "0.4.3"
regex = "1.5"
async-trait = "0.1"
openssl = "0.10.56"
url = "2.2.0"
dotenv = "0.15.0"
ring = "0.16.20"
serde_urlencoded = "0.7.1"
once_cell = "1.18.0"
hmac-sha256 = "1.1.7"


[[bin]]
name = "run_test"
path = "example/bybit_test.rs"
